--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
     </a>
     </div>
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" href="{{ site.blogurl }}/">{{ site.title }}</a>
     
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -23,9 +23,10 @@
         </svg>
       </a>
       <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
-        {% endfor %}
+        <a class="page-link" href="{{site.url}}">About me</a>
+        <!--{% for page in site.pages %}-->
+          <!--{% if page.title %}<a class="page-link" href="{{ page.url| prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}-->
+        <!--{% endfor %}-->
       </div>
     </nav>
   </div>
