--- a/assets_files/yangqing.css
+++ b/assets_files/yangqing.css
@@ -11,11 +11,13 @@
 
 #blackBar{
     position:fixed;
-    top:4px;
+    top:0;
     left:0;
     width:100%;
-    height:18px;
-    background-color:ghostwhite;
+    height:30px;
+    line-height: 30px;
+    background-color:white;
+
 }
 
 #photos {
